# saguaro

./: .gitignore  Cargo.toml  README.md  benchmark.rb  checker.rb  dune-project
lib/: assignments.ml  assignments.mli  cnf.ml  cnf.mli  cnf_file_lexer.ml  cnf_file_lexer.mll  cnf_file_parser.ml  cnf_file_parser.mli  cnf_file_parser.mly  dune  solver.ml  solver.mli
saguaro/: Cargo.toml
saguaro/src/: assignments.rs  cnf.rs  lib.rs  parser.rs  solver.rs  trail.rs
saguaro/src/solver/: tests.rs
saguaro/tests/: cnf_test.rs  parser_test.rs
saguaro_cli/: Cargo.toml
saguaro_cli/src/: main.rs
saguaro_web/: Cargo.toml
saguaro_web/src/: lib.rs
src/: assignments.rs  bin.rs  cnf.rs  cnf_parser.rs  di_graph.rs  lib.rs  main.rs  parser.rs  solver.rs
src/assignments/: tests.rs
src/di_graph/: tests.rs
src/solver/: tests.rs
test/: dune  test_saguaro.ml
