[package]
name = "saguaro_web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
saguaro = { path = "../saguaro" }
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"